--- a/backend_core/Dockerfile
+++ b/backend_core/Dockerfile
@@ -13,9 +13,9 @@ COPY Pipfile Pipfile.lock ./
 RUN pip install -U pipenv
 RUN pipenv install --system
 
-#COPY ./entrypoint.sh .
-#RUN chmod +x ./entrypoint.sh
+COPY ./entrypoint.sh .
+RUN chmod +x ./entrypoint.sh
 
 COPY . .
 
-#ENTRYPOINT ["./entrypoint.sh"]
+ENTRYPOINT ["./entrypoint.sh"]
